<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <app.todo.core.view.CustomFontTextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/due_today"
        android:textColor="@color/colorBlue"
        android:textSize="24sp"
        app:fontName="Lato-Bold.ttf" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:theme="@style/TodoListThemeDatePicker" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:id="@+id/dialog_layout_reminder_me"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:gravity="center_vertical">

        <app.todo.core.view.CustomFontTextView
            android:id="@+id/dialog_icon_remind_me"
            style="@style/text_view_icon_edit_reminder_style"
            android:text="@string/text_icon_remind_me"
            app:fontName="Wundercon-Light.otf" />

        <app.todo.core.view.CustomFontTextView
            android:id="@+id/dialog_remind_me"
            style="@style/text_view_edit_reminder_style"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/reminder_me"
            app:fontName="Lato-Regular.ttf" />

        <app.todo.core.view.CustomFontTextView
            android:id="@+id/dialog_remind_me_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:text="@string/text_icon_cancel_big"
            android:textColor="@color/text_icon_image_default"
            android:textSize="24dp"
            android:visibility="gone"
            app:fontName="Wundercon-Light.otf" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:id="@+id/dialog_layout_repeat"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:gravity="center_vertical">

        <app.todo.core.view.CustomFontTextView
            android:id="@+id/dialog_icon_repeat"
            style="@style/text_view_icon_edit_reminder_style"
            android:text="@string/text_icon_repeat"
            app:fontName="Wundercon-Light.otf" />


        <app.todo.core.view.CustomFontTextView
            android:id="@+id/dialog_repeat"
            style="@style/text_view_edit_reminder_style"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/never_repeat"
            app:fontName="Lato-Regular.ttf" />

        <app.todo.core.view.CustomFontTextView
            android:id="@+id/dialog_repeat_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:text="@string/text_icon_cancel_big"
            android:textColor="@color/text_icon_image_default"
            android:textSize="24dp"
            android:visibility="gone"
            app:fontName="Wundercon-Light.otf" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/line_color" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="24dp"
        android:paddingEnd="24dp"
        android:paddingStart="24dp">

        <app.todo.core.view.CustomFontTextView
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:paddingEnd="0dp"
            android:paddingStart="18dp"
            android:text="@string/button_save"
            android:textAllCaps="true"
            android:textColor="@color/colorBlue"
            android:textSize="15sp"
            app:fontName="Lato-Bold.ttf" />

        <app.todo.core.view.CustomFontTextView
            android:id="@+id/buttonRemove"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_toStartOf="@id/buttonSave"
            android:gravity="center"
            android:paddingEnd="16dp"
            android:paddingStart="18dp"
            android:text="@string/button_remove"
            android:textAllCaps="true"
            android:textColor="@color/colorBlue"
            android:textSize="15sp"
            app:fontName="Lato-Bold.ttf" />

    </RelativeLayout>

</LinearLayout>
