<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_background_settings"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:gravity="center_vertical">

        <app.todo.core.view.CustomFontTextView
            style="@style/text_view_icon_edit_reminder_style"
            android:text="@string/text_icon_background"
            android:textSize="@dimen/text_size_icon_common"
            app:fontName="Wundercon-Light.otf" />

        <app.todo.core.view.CustomFontTextView
            style="@style/text_view_edit_reminder_style"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/text_background"
            android:textColor="@color/text_color_setting"
            app:fontName="Lato-Regular.ttf" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="@dimen/horizontal_space"
            android:layout_marginStart="@dimen/horizontal_space"
            android:src="@drawable/background" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="56dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:id="@+id/layout_snooze_reminder_settings"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/icon_size_common"
            android:layout_height="@dimen/icon_size_common"
            android:layout_marginEnd="@dimen/horizontal_space"
            android:layout_marginStart="@dimen/horizontal_space"
            android:padding="2dp"
            android:src="@drawable/wl_settings_icon_snooze"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <app.todo.core.view.CustomFontTextView
                style="@style/text_view_edit_reminder_style"
                android:text="@string/snooze_reminders"
                android:textColor="@color/text_color_setting"
                app:fontName="Lato-Regular.ttf" />

            <app.todo.core.view.CustomFontTextView
                style="@style/text_view_edit_reminder_style"
                android:text="5 minutes"
                android:textColor="@color/colorBlue"
                android:textSize="14dp"
                app:fontName="Lato-Regular.ttf" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="56dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:id="@+id/layout_enable_auto_reminder"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:gravity="center_vertical">

        <app.todo.core.view.CustomFontTextView
            style="@style/text_view_icon_edit_reminder_style"
            android:text="@string/text_icon_auto_reminder"
            android:textSize="@dimen/text_size_icon_common"
            app:fontName="Wundercon-Light.otf" />

        <app.todo.core.view.CustomFontTextView
            style="@style/text_view_edit_reminder_style"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/enable_auto_reminders"
            android:textColor="@color/text_color_setting"
            app:fontName="Lato-Regular.ttf" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/horizontal_space"
            android:layout_marginStart="@dimen/horizontal_space"
            android:theme="@style/CheckBoxStyle" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="56dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:id="@+id/layout_sound_settings"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:gravity="center_vertical">

        <app.todo.core.view.CustomFontTextView
            style="@style/text_view_icon_edit_reminder_style"
            android:text="@string/text_icon_sounds"
            android:textSize="@dimen/text_size_icon_common"
            app:fontName="Wundercon-Light.otf" />

        <app.todo.core.view.CustomFontTextView
            style="@style/text_view_edit_reminder_style"
            android:layout_width="0dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/text_sounds"
            android:textColor="@color/text_color_setting"
            app:fontName="Lato-Regular.ttf" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="56dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:id="@+id/layout_widget_settings"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:gravity="center_vertical">

        <app.todo.core.view.CustomFontTextView
            style="@style/text_view_icon_edit_reminder_style"
            android:text="@string/text_icon_widget"
            android:textSize="@dimen/text_size_icon_common"
            app:fontName="Wundercon-Light.otf" />

        <app.todo.core.view.CustomFontTextView
            style="@style/text_view_edit_reminder_style"
            android:layout_width="0dp"
            android:layout_marginEnd="@dimen/horizontal_space"
            android:layout_weight="1"
            android:text="@string/text_widget"
            android:textColor="@color/text_color_setting"
            app:fontName="Lato-Regular.ttf" />

    </LinearLayout>

</LinearLayout>